# spin-prototype

./: Cargo.toml  LICENSE.txt  README.md  rustfmt.toml  spin.toml
.spin/: sqlite_key_value.db
.spin/logs/: test1_stdout.txt  test2_stderr.txt  test2_stdout.txt
assets/: index.html
src/: lib.rs
test1/: Cargo.toml
test1/src/: lib.rs
test2/: Cargo.toml
test2/src/: lib.rs
test3/: Cargo.toml
test3/src/: lib.rs
test4/: Cargo.toml
test4/src/: lib.rs  tests.rs
test5/: Cargo.toml
test5/src/: lib.rs
