[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Prototype of a Fermyon Spin application"
edition = "2021"
homepage = "https://www.CroftSoft.com/"
keywords = ["spin"]
license = "MIT"
name = "test2"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/spin-prototype"
version = "0.0.0-SNAPSHOT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
