[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "JSON"
edition = "2021"
name = "test3"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
http = "0.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }
